--- a/frontend/src/festive-gift-section.html
+++ b/frontend/src/festive-gift-section.html
@@ -1,34 +1,5 @@
 <style>
   #festive-gift-section {
-    .info-icon {
-      position: relative;
-      display: inline-block;
-      cursor: pointer;
-    }
-
-    .info-tooltip {
-      visibility: hidden;
-      opacity: 0;
-      position: absolute;
-      top: 150%;
-      left: 50%;
-      transform: translateX(-50%);
-      background-color: rgba(0, 0, 0, 0.7);
-      color: #fff;
-      padding: 8px;
-      border-radius: 4px;
-      font-size: 12px;
-      transition: opacity 0.2s;
-      z-index: 1000;
-      width: 200px;
-    }
-
-    .info-icon:hover .info-tooltip,
-    .info-icon:focus .info-tooltip {
-      visibility: visible;
-      opacity: 1;
-    }
-
     .note-box {
       background-color: #fff8e2;
       border: 1px solid #f9e7b8;
@@ -69,12 +40,12 @@
         <label for="festive-gift-section--recipient-name">
           Recipient's first name (14 characters max)
         </label>
-        <div class="info-icon" tabindex="0">
+        <button type="button" popovertarget="festive-gift-section--name-info">
           ⓘ
-          <div class="info-tooltip">
-            This will add the recipient’s name to the card’s opening (tip: so if
-            it’s for your mum, enter ‘mum’)
-          </div>
+        </button>
+        <div popover id="festive-gift-section--name-info">
+          This will add the recipient’s name to the card’s opening (tip: so if
+          it’s for your mum, enter ‘mum’)
         </div>
         <input
           type="text"
@@ -90,13 +61,13 @@
         <label for="festive-gift-section--recipient-email">
           Recipient's email
         </label>
-        <div class="info-icon" tabindex="0">
+        <button type="button" popovertarget="festive-gift-section--email-info">
           ⓘ
-          <div class="info-tooltip">
-            We’ll send them a <em>one-time</em> email around the 30th of
-            December confirming your donation and sharing info on EAA and a
-            match offer. If you’d prefer, you may enter your email address.
-          </div>
+        </button>
+        <div popover id="festive-gift-section--email-info">
+          We’ll send them a <em>one-time</em> email around the 30th of December
+          confirming your donation and sharing info on EAA and a match offer. If
+          you’d prefer, you may enter your email address.
         </div>
         <input
           type="email"
@@ -111,13 +82,16 @@
         <label for="festive-gift-section--message">
           Personal message (optional, 120 characters max)
         </label>
-        <div class="info-icon" tabindex="0">
+        <button
+          type="button"
+          popovertarget="festive-gift-section--message-info"
+        >
           ⓘ
-          <div class="info-tooltip">
-            We’ll digitally add this to the card. If you intend to print it, you
-            may wish to skip this step and hand-write a message in the space
-            instead. Or leave it blank entirely!
-          </div>
+        </button>
+        <div popover id="festive-gift-section--message-info">
+          We’ll digitally add this to the card. If you intend to print it, you
+          may wish to skip this step and hand-write a message in the space
+          instead. Or leave it blank entirely!
         </div>
         <textarea
           id="festive-gift-section--message"
