Add colon to amplify

--- a/frontend/src/amplify-impact-section.html
+++ b/frontend/src/amplify-impact-section.html
@@ -33,7 +33,7 @@
 
 <section id="amplify-impact-section">
   <h2 class="text-lg">Amplify my impact</h2>
-  <p>I would like to add</p>
+  <p>I would like to add:</p>
   <div class="radio-group flex gap-2">
     <input
       type="radio"
