--- a/frontend/src/thankyou-section.html
+++ b/frontend/src/thankyou-section.html
@@ -1,10 +1,10 @@
 <style>
-  #thank-you-message {
+  #thankyou-section {
     display: none;
   }
 </style>
 
-<section id="thank-you-message">
+<section id="thankyou-section">
   <h2>Thank you!</h2>
   <p>Your receipt will be sent to your email address.</p>
 
@@ -20,9 +20,9 @@
 </section>
 
 <script>
-  class ThankYouSection {
+  class ThankyouSection {
     constructor() {
-      $("#thank-you-message").style.display = "block";
+      $("#thankyou-section").style.display = "block";
     }
   }
 </script>
