--- a/frontend/src/amplify-impact-section.html
+++ b/frontend/src/amplify-impact-section.html
@@ -134,7 +134,7 @@
       />
     </span>
   </div>
-  <p>
+  <p class="mb-1">
     To grow Effective Altruism Australia's work
     <button type="button" popovertarget="festive-gift-section--message-info">
       ⓘ
