--- a/frontend/src/amplify-impact-section.html
+++ b/frontend/src/amplify-impact-section.html
@@ -143,8 +143,8 @@
   <div popover id="festive-gift-section--message-info">
     EA Australia is on a mission to help Australians tackle the world’s most
     pressing problems. We have big plans to reach more people, improve our
-    infrastructure, and grow our community. With your support, we can help a
-    larger slice of donations made in Australia go toward high impact causes.
+    infrastructure, and grow our community. With your support, we can move more
+    donations to high impact causes.
   </div>
 </section>
 
