Update faqs link

--- a/frontend/src/festive-gift-section.html
+++ b/frontend/src/festive-gift-section.html
@@ -104,7 +104,7 @@
       <div class="note-box { font-size: 12px; color: #666; margin-top: 8px;">
         <strong>Note:</strong> the card will be sent to <em>your</em> email
         address, <strong>not the recipient’s</strong>. Please check your spam
-        folder. <a href="https://eaa.org.au/">Click here for FAQs</a>.
+        folder. <a href="https://eaa.org.au/christmascards/#faqs">Click here for FAQs</a>.
       </div>
     </fieldset>
   </div>
