--- a/frontend/src/total-amount-section.html
+++ b/frontend/src/total-amount-section.html
@@ -9,8 +9,22 @@
     table tr:last-child {
       font-weight: bold;
     }
+    table tr:nth-last-child(2) td {
+      padding-bottom: 0.5rem;
+    }
     table tr:last-child td:last-child {
       font-size: 2rem;
+      padding: 1rem 0;
+    }
+    .tax-deductible {
+      font-size: 0.8rem;
+      font-weight: normal;
+      color: #666;
+      margin-top: -1.3em;
+      line-height: 1;
+    }
+    .total-donation {
+      line-height: 1;
     }
   }
 </style>
@@ -57,13 +71,14 @@
       const { basicDonationAmount, tipDollarAmount, tipType, tipSize } =
         context;
       const isMonthly = formController.getDonationFrequency() === "monthly";
-      const amplifyPercentage =
-        tipType === "percentage" ? "(+" + tipSize + "%)" : "";
+      const amplifyPercentage = tipType === "percentage"
+        ? "(+" + tipSize + "%)"
+        : "";
       const combinedTotal = basicDonationAmount + tipDollarAmount;
       let table = `
         <tr>
-          <td><h2 class="text-md">Designation</h2></td>
-          <td><h2 class="text-md">Amount</h2></td>
+          <td><h2 class="text-lg mt-8">Summary</h2></td>
+          <td><h2 class="text-lg mt-8">Amount</h2></td>
         </tr>
         <tr>
           <td>The most effective charities</td>
@@ -74,7 +89,12 @@
           <td>${this.#formatCurrency(tipDollarAmount)}</td>
         </tr>
         <tr>
-          <td>Total donation ${isMonthly ? " (each month)" : ""}</td>
+          <td>
+            <div class='total-donation'>TOTAL DONATION ${
+              isMonthly ? "(each month)" : ""
+            }</div><br />
+            <div class='tax-deductible'>100% tax deductible</div>
+          </td>
           <td>${this.#formatCurrency(combinedTotal)}</td>
         </tr>`;
       $("#total-amount-section table").innerHTML = table;
@@ -85,8 +105,9 @@
         context;
       const isMonthly = formController.getDonationFrequency() === "monthly";
 
-      const amplifyPercentage =
-        tipType === "percentage" ? "(" + tipSize + "%)" : "";
+      const amplifyPercentage = tipType === "percentage"
+        ? "(" + tipSize + "%)"
+        : "";
 
       // Create a lookup table for charity names
       const charityNameLookup = {};
@@ -104,8 +125,8 @@
 
       let table = `
         <tr>
-          <td><h2 class="text-md">Designation</h2></td>
-          <td><h2 class="text-md">Amount</h2></td>
+          <td><h2 class="text-lg mt-8">Summary</h2></td>
+          <td><h2 class="text-lg mt-8">Amount</h2></td>
         </tr>`;
       Object.keys(specificAllocations).forEach((charitySlug) => {
         const charityAmount = +specificAllocations[charitySlug] || 0;
@@ -122,7 +143,12 @@
           <td>${this.#formatCurrency(tipDollarAmount)}</td>
         </tr>
         <tr>
-          <td>Total donation ${isMonthly ? " (each month)" : ""}</td>
+          <td>
+            <div class='total-donation'>TOTAL DONATION ${
+              isMonthly ? "(each month)" : ""
+            }</div><br />
+            <div class='tax-deductible'>100% tax deductible</div>
+          </td>
           <td>${this.#formatCurrency(combinedTotal)}</td>
         </tr>`;
       $("#total-amount-section table").innerHTML = table;
