--- a/frontend/src/amplify-impact-section.html
+++ b/frontend/src/amplify-impact-section.html
@@ -28,13 +28,17 @@
       width: 100%;
       background-color: white;
     }
+    
+    .wrap {
+      flex-wrap: wrap;
+    }
   }
 </style>
 
 <section id="amplify-impact-section">
   <h2 class="text-lg">Amplify my impact</h2>
   <p>I would like to add:</p>
-  <div class="radio-group flex gap-2">
+  <div class="radio-group flex gap-2 wrap">
     <input
       type="radio"
       id="amplify-impact-section--amount-0"
