Limit post code to 4 digits Some folks have accidentally entered card details here. Limiting this to 4 digits should help.

--- a/frontend/src/personal-details-section.html
+++ b/frontend/src/personal-details-section.html
@@ -50,6 +50,7 @@
         pattern="\d*"
         class="block w-full p-2 text-md border rounded focus-outline mb-2 mt-1"
         onchange="PersonalDetailsSection.handlePostcodeChange()"
+        maxlength="4"
         required
       />
     </div>
