Use consistent show/hide functionality in donation form

--- a/frontend/src/allocation-section.html
+++ b/frontend/src/allocation-section.html
@@ -41,7 +41,7 @@
 <script>
   class AllocationSection {
     constructor() {
-      $("#allocation-section").style.display = "block";
+      showBlock("#allocation-section");
     }
 
     static handleSpecificAllocationChange() {
