--- a/frontend/src/amplify-impact-section.html
+++ b/frontend/src/amplify-impact-section.html
@@ -159,7 +159,7 @@
 <script>
   class AmplifyImpactSection {
     constructor() {
-      $("#amplify-impact-section").style.display = "block";
+      showBlock("#amplify-impact-section");
     }
 
     updateTotalDonation(giftAmount) {
