--- a/frontend/src/bank-instructions-section.html
+++ b/frontend/src/bank-instructions-section.html
@@ -90,7 +90,7 @@
         directLinkCharityDetails,
       } = context;
 
-      $("#bank-instructions-section").style.display = "block";
+      showBlock("#bank-instructions-section");
       $("#bank-instructions-section--name").innerText = firstName;
       $("#bank-instructions-section--reference").innerText = bankReference;
 
