--- a/frontend/src/communications-section.html
+++ b/frontend/src/communications-section.html
@@ -56,7 +56,7 @@
 <script>
   class CommunicationsSection {
     constructor() {
-      $("#communications-section").style.display = "block";
+      showBlock("#communications-section");
       this.referralSourcesSelect = $(
         "#communications-section--referral-sources"
       );
