--- a/frontend/src/donate-button-section.html
+++ b/frontend/src/donate-button-section.html
@@ -18,7 +18,7 @@
 <script>
   class DonateButtonSection {
     constructor() {
-      $("#donate-button-section").style.display = "block";
+      showBlock("#donate-button-section");
     }
   }
 </script>
