--- a/frontend/src/error-section.html
+++ b/frontend/src/error-section.html
@@ -13,7 +13,7 @@
 <script>
   class ErrorSection {
     constructor() {
-      $("#error-section").style.display = "block";
+      showBlock("#error-section");
     }
   }
 </script>
