--- a/frontend/src/personal-details-section.html
+++ b/frontend/src/personal-details-section.html
@@ -324,7 +324,7 @@
     ];
 
     constructor() {
-      $("#personal-details-section").style.display = "block";
+      showBlock("#personal-details-section");
       this.#buildCountriesList();
     }
 
