--- a/frontend/src/specific-allocation-section.html
+++ b/frontend/src/specific-allocation-section.html
@@ -30,11 +30,11 @@
     }
 
     static show() {
-      $("#specific-allocation-section").style.display = "block";
+      showBlock("#specific-allocation-section");
     }
 
     static hide() {
-      $("#specific-allocation-section").style.display = "none";
+      hide("#specific-allocation-section");
     }
 
     static getSpecificAllocations() {
