--- a/frontend/src/thankyou-section.html
+++ b/frontend/src/thankyou-section.html
@@ -22,7 +22,7 @@
 <script>
   class ThankyouSection {
     constructor() {
-      $("#thankyou-section").style.display = "block";
+      showBlock("#thankyou-section");
     }
   }
 </script>
