--- a/frontend/src/total-amount-section.html
+++ b/frontend/src/total-amount-section.html
@@ -49,7 +49,7 @@
 <script>
   class TotalAmountSection {
     constructor() {
-      $("#total-amount-section").style.display = "block";
+      showBlock("#total-amount-section");
     }
 
     static render(context) {
