--- a/frontend/src/direct-link-charity-section.html
+++ b/frontend/src/direct-link-charity-section.html
@@ -21,7 +21,7 @@
 <script>
   class DirectLinkCharitySection {
     constructor(directLinkCharityDetails) {
-      $("#direct-link-charity-section").style.display = "block";
+      showBlock("#direct-link-charity-section");
       this.#buildDirectLinkCharitySection(directLinkCharityDetails);
     }
 
