--- a/frontend/src/donation-frequency-section.html
+++ b/frontend/src/donation-frequency-section.html
@@ -31,7 +31,7 @@
 <script>
   class DonationFrequencySection {
     constructor() {
-      $("#donation-frequency-section").style.display = "block";
+      showBlock("#donation-frequency-section");
     }
 
     static handleFrequencyChange(event) {
